[project]
name = "triton-collections"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "supersimple33", email = "40609224+supersimple33@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "triton>=3.6.0",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
