[project]
name = "triton-collections"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "supersimple33", email = "40609224+supersimple33@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.11.0",
    "triton>=3.6.0",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "numpy>=2.2.6",
    "pytest>=9.0.3",
]
